fixed overflow error

--- a/index.scss
+++ b/index.scss
@@ -91,7 +91,7 @@ $color5: rgba(244, 233, 205, 1);
         @media only screen and(max-width: 840px){
             // top: calc(70vh - 70px - (840px*.35));
         }
-        // overflow: hidden;
+        overflow: hidden;
     }
     .background{
         position: absolute;
